fixed label look on mobile and overall

--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -9,14 +9,14 @@ body {
     text-align: center;
 }
 
-.playlist > .ant-image > .ant-image-img {
+.playlist > .lazyload-wrapper > .ant-image > .ant-image-img {
     border-radius: 5px;
     transition: 0.3s;
     padding-bottom: 2px;
 }
 
-.playlist > .ant-image > .ant-image-img:hover {
-    border-radius: 10px;
+.playlist > .lazyload-wrapper > .ant-image > .ant-image-img:hover {
+    border-radius: 5px;
     opacity: 1.0;
 }
 
