--- a/src/Label.css
+++ b/src/Label.css
@@ -3,6 +3,7 @@
   grid-column-start: 1;
   border: 2px black solid;
   padding: 5px;
+  margin: 10px;
 }
 
 .parent-div {
@@ -25,8 +26,8 @@ body {
 .playlist-gen-info {
   text-align: left;
   border-bottom: 7px black solid;
-  line-height: 30%;
-  padding-bottom: 10px;
+  /* line-height: 30%; */
+  /*padding-bottom: 10px;*/
   margin-top: -7px;
 }
 
